--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,25 +1,25 @@
 
 body {
     font-family: 'Andale Mono', 'Courier New', monospace, sans-serif;
-    background-color: #FFE8D6;
-    color: black;
+    background-color: #290133;
+    color: #FFFFFF;
     margin: 0;
     padding: 0;
 }
 
 nav {
     font-family: 'Andale Mono', 'Courier New', monospace, sans-serif;
-    background-color: #f39c12;
+    background-color: #672976;
 }
 
 a {
     font-family: 'Andale Mono', 'Courier New', monospace, sans-serif;
-    color: #482100;
-    text-decoration: none
+    color: #A37BDD;
+    text-decoration: none;
 }
 
 .profile-container {
-    background-color: #FFBF69;
+    background-color: #672976;
 
     /*border: 3px solid #2F4F4F; /* Border style, width, and color */
     border-radius: 20px; /* Adjust the radius to control the roundness of corners */
@@ -28,7 +28,7 @@ a {
     margin-bottom: 20px;
 
     /* Creating beveled edges */
-    border-image-source: linear-gradient(90deg, transparent 50%, #2F4F4F 25%, #2F4F4F 75%, transparent 75%, transparent) 2;
+    border-image-source: linear-gradient(90deg, transparent 50%, #E3CFE8 25%, #E3CFE8 75%, transparent 75%, transparent) 2;
     border-image-slice: 1;
     border-image-repeat: stretch;
 }
@@ -38,7 +38,8 @@ a {
 }
 
 .project {
-    background-color: #FFBF69;
+    background-color: #CBA4D1;
+    color: #290133;
 
     border-radius: 20px;
 
@@ -56,8 +57,14 @@ a {
     border-image-source: linear-gradient(90deg, transparent 50%, #2F4F4F 25%, #2F4F4F 75%, transparent 75%, transparent) 2;
     border-image-slice: 1;
     border-image-repeat: stretch;
+}
 
+.project-container {
+    height:1000px;
+}
 
+.spacer {
+    height:200px
 }
 
 
@@ -69,6 +76,22 @@ img {
 
 .nav-link {
     font-family: 'Andale Mono', cursive, sans-serif;
-    color: #8B4000;
+    color: #A37BDD;
 }
+
+.text-left {
+    font-family: 'Andale Mono', cursive, sans-serif;
+    color: #FFFFFF;
+}
+
+.text-1 {
+    font-family: 'Andale Mono', cursive, sans-serif;
+    color: #FFFFFF;
+}
+
+.text-2 {
+    font-family: 'Andale Mono', cursive, sans-serif;
+    color: #FFCDFF;
+}
+
 
