--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,7 +2,7 @@
 body {
     font-family: 'Andale Mono', 'Courier New', monospace, sans-serif;
     background-color: #290133;
-    color: #FFFFFF;
+
     margin: 0;
     padding: 0;
 }
@@ -31,6 +31,27 @@ a {
     border-image-source: linear-gradient(90deg, transparent 50%, #E3CFE8 25%, #E3CFE8 75%, transparent 75%, transparent) 2;
     border-image-slice: 1;
     border-image-repeat: stretch;
+}
+
+.profile-content {
+    z-index: 1;
+}
+
+.video-background-container {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+}
+  
+.video-background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    z-index: -1;
 }
 
 .project:hover {
@@ -93,5 +114,7 @@ img {
     font-family: 'Andale Mono', cursive, sans-serif;
     color: #FFCDFF;
 }
+
+
 
 
