--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,7 +2,7 @@
 body {
     font-family: 'Andale Mono', 'Courier New', monospace, sans-serif;
     background-color: #290133;
-
+    color: #FFFFFF;
     margin: 0;
     padding: 0;
 }
